feat: 校正版，能完整推送到208並啟動成功
